<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
  <FrameLayout
        android:id="@id/fraTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head_bg" >

        <TextView
            style="@style/style_18_BEBEBE_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="更多" />

    </FrameLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/fraTitle"
        android:layout_marginBottom="55.0dip"
        android:layout_above="@id/bottomBar" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/my_account_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:id="@+id/my_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/my_account_title"
                    android:textSize="14.0sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/my_order_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:id="@+id/my_ordr_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/my_ordr_title"
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/address_manage_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:id="@+id/address_manage_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5.0dip"
               	    android:layout_marginRight="5.0dip"
                    android:layout_marginTop="8.0dip"
                    android:text="@string/address_manage_title"
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/my_favorite_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:id="@+id/my_favorite_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/my_favorite_title"
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/recent_browse_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:id="@+id/recent_browse_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/recent_browse_title"
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/helpRelLay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/help_title"
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
                
            <RelativeLayout
                android:id="@+id/userfeedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/userfeedback"   
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/aboutRelLay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@anim/shape_rounded_selectable"
                android:gravity="center_vertical"
                android:padding="10.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/about_title"
                    android:textSize="14.0sp"  />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20.0dip"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@id/bottomBar"
        layout="@layout/bottombar" />

</RelativeLayout>